<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.example.caro.microadmin.ProductoActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_agregarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Nuevo Producto" />

    <ImageButton
        android:id="@+id/bt_cerrar_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/toolbar_agregarProducto"
        android:background="#2C3756"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_clear_white_24dp" />

    <ScrollView
        android:id="@+id/form_producto"
        android:layout_width="368dp"
        android:layout_height="587dp"
        android:scrollbarStyle="insideOverlay"
        android:layout_below="@id/toolbar_agregarProducto"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/layout_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/producto_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    tools:ignore="ContentDescription,VectorDrawableCompat" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/bt_subir_imagen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:clickable="true"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    tools:ignore="RtlHardcoded,VectorDrawableCompat" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tf_codigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigo"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/tv_nombre_producto" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tv_nombre_producto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:nextFocusDown="@+id/tf_cantifdad" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tf_cantifdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cantidad"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tf_precio_unidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio_por_unidad"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tf_costo_manufactura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/costo_manufactura_por_unidad"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#43cc70"
                android:text="@string/guardar"
                android:textColor="@color/cardview_light_background" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
