<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.example.caro.microadmin.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.60">

                <EditText
                    android:id="@+id/tf_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.60">

                <EditText
                    android:id="@+id/tf_correo"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:hint="Correo electrónico"
                    android:inputType="textEmailAddress"
                    tools:ignore="HardcodedText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.60">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.60"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <EditText
                    android:id="@+id/tf_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_registrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Registrarme"
                tools:ignore="HardcodedText,MissingConstraints"
                tools:layout_editor_absoluteX="13dp"
                tools:layout_editor_absoluteY="447dp" />

            <TextView
                android:id="@+id/link_iniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                android:clickable="true"
                android:paddingLeft="130dp"
                android:text="@string/iniciar_sesi_n"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
